integration_tests/k8s_resources/simple/dev/slug-1/another.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: another-app
  labels:
    app: another-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: another-app
  template:
    metadata:
      labels:
        app: another-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: another-app
          image: navikt/app-name:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: another-app
  labels:
    name: another-app
    app: another-app
spec:
  ingressClassName: nais-ingress-external
  rules:
    - host: another-app.external.server.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-name
                port:
                  number: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: another-app-23422-2sdf
  labels:
    app: another-app
  creationTimestamp: "2022-07-06T09:45:18Z"
spec:
  containers:
    - name: another-app
      image: navikt/app-name:latest
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
